--- a/.github/workflows/build-test-install.yml
+++ b/.github/workflows/build-test-install.yml
@@ -17,7 +17,8 @@ jobs:
     with:
       os: ${{ matrix.os }}
       qtVersion: '6.6.0'
-      cmakeArgs: "-DQTDEPLOY=ON -DBUILD_EXAMPLES=ON -DCPACK_PACKAGE_CONTACT=estervtech@gmail.com -DREPO_URL=https://eddytheco.github.io/QUpdater -DCPACK_PACKAGE_VENDOR=estervtech"  
+      cmakeArgs: "-DQTDEPLOY=ON -DBUILD_EXAMPLES=ON -DCPACK_PACKAGE_CONTACT=estervtech@gmail.com -DREPO_URL=https://eddytheco.github.io/QUpdater -DCPACK_PACKAGE_VENDOR=estervtech"
+      test: false
   
   build_doxygen:
     if: startsWith(github.ref, 'refs/tags/v')
