--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,7 +20,7 @@ if(BUILD_EXAMPLES)
     )
 install(TARGETS quickApp
     BUNDLE  DESTINATION .
-    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     COMPONENT examples
 )
 if(QTDEPLOY)
@@ -39,7 +39,7 @@ set_target_properties(coreApp PROPERTIES
 )
 install(TARGETS coreApp
     BUNDLE  DESTINATION .
-    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     COMPONENT examples
 )
 
