--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,17 +18,16 @@ if(BUILD_EXAMPLES)
         WIN32_EXECUTABLE ON
         MACOSX_BUNDLE ON
     )
-install(TARGETS quickApp
-    BUNDLE  DESTINATION .
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+install(TARGETS quickApp 
     COMPONENT examples
+    BUNDLE  DESTINATION . COMPONENT examples
 )
 if(QTDEPLOY)
     qt_generate_deploy_qml_app_script(
         TARGET quickApp
         OUTPUT_SCRIPT deploy_script1
     )
-install(SCRIPT ${deploy_script1})
+install(SCRIPT ${deploy_script1} COMPONENT examples)
 endif(QTDEPLOY)
 endif(USE_QML)
 target_link_libraries(coreApp PRIVATE qupdater)
