used latest common scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ include(FetchContent)
 FetchContent_Declare(
 	ccommon
 	GIT_REPOSITORY https://github.com/EddyTheCo/Common.git
-	GIT_TAG v0.3.1
+	GIT_TAG v0.4.0
 	)
 FetchContent_MakeAvailable(ccommon)
 version_from_git(
@@ -28,7 +28,7 @@ if(USE_QML)
 	find_package(Qt6 COMPONENTS Core Xml Gui Quick)
 else()
 	find_package(Qt6 COMPONENTS Core Xml)
-endif()
+endif(USE_QML)
 
 
 if (Qt6_FOUND)
