--- a/.github/workflows/codeFormat.yml
+++ b/.github/workflows/codeFormat.yml
@@ -19,13 +19,14 @@ jobs:
       - name: Install dependencies on ubuntu
         run: |
           sudo apt-get update
-          sudo apt-get install clang-format
+          sudo apt-get install clang-format jq
+          pip install cmakelang
       
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
         with:
           aqtversion: '==3.1.*'
-          version: '6.6.0'
+          version: '6.7.0'
           host: 'linux'
           target: 'desktop'
           arch: 'gcc_64'
@@ -35,6 +36,9 @@ jobs:
           rm aqtinstall.log
           find . -regex '.*\.\(cpp\|hpp\|cu\|cuh\|c\|h\)' -exec clang-format -style=file -i {} \;
           find . -regex '.*\.\(qml\)' -exec  qmlformat  -i {} \;
+          find . -regex '.*\.\(json\)' -exec bash -c "jq . {}  > {}.back; mv {}.back {} " \;
+          find . -regex '.*\.\(cmake\)' -exec  cmake-format -i {} \;
+          find . -name  'CMakeLists.txt' -exec  cmake-format -i {} \;
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6.0.4
