--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,9 +82,9 @@ if (Qt6_FOUND)
 
 	install(TARGETS updater
 		EXPORT ${PROJECT_NAME}-config
-		DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		COMPONENT ${PROJECT_NAME}
-		RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT ${PROJECT_NAME}
+		ARCHIVE COMPONENT  ${PROJECT_NAME}-dev
+		RUNTIME COMPONENT ${PROJECT_NAME}
 		)
 	install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/
 		DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
