--- a/.github/workflows/build-test-install.yml
+++ b/.github/workflows/build-test-install.yml
@@ -1,23 +1,31 @@
 name: push-build-release
-run-name: ${{ github.actor }} ${{ github.event_name }} to ${{ github.base_ref }} 
+run-name: ${{ github.actor }} ${{ github.event_name }} to ${{ github.event.pull_request.base.ref }}
 on: 
 
   push:
     tags:
       - 'v*'
   pull_request:
-    branches: [develop]
+    branches: [main,develop]
 jobs:
+  check_format:
+    if: startsWith(github.base_ref, 'main') 
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Check if formatted_code branch exist
+        run: |
+
+
   build_test_package:
-    permissions: read-all
     strategy:
       matrix:
         os: [ubuntu-latest,macos-latest,windows-latest]
 
-    uses: EddyTheCo/Common/.github/workflows/build-test-install.yml@ndk26
+    uses: EddyTheCo/Common/.github/workflows/build-test-install.yml@add_code_format_check
     with:
       os: ${{ matrix.os }}
-      qtVersion: '6.7.0'
+      qtVersion: '6.8.1'
   
   release:
     if: startsWith(github.ref, 'refs/tags/v')
@@ -40,8 +48,6 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
            path: artifacts
-      - name: Display structure of downloaded files
-        run: ls -R
 
       - name: Move repositories to webpage
         run: |
