--- a/.github/workflows/qml-lint.yml
+++ b/.github/workflows/qml-lint.yml
@@ -17,7 +17,7 @@ jobs:
       - name: 'Download artifact'
         uses: actions/download-artifact@v4
         with:
-          name: "common"
+          name: common
           github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
 
