align namings and cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,17 @@
 cmake_minimum_required(VERSION 3.24)
 
 option(USE_QML "Create QML types and modules" ON)
+option(BUILD_EXAMPLES "Build the examples" ON)
+option(QTDEPLOY "Deploy Qt dependencies for examples" ON)
+option(BUILD_DOCS "Build documentation" ON)
+
 include(${CMAKE_CURRENT_BINARY_DIR}/local_conf.cmake OPTIONAL)
 
 include(FetchContent)
 FetchContent_Declare(
   ccommon
   GIT_REPOSITORY https://github.com/EddyTheCo/Common.git
-  GIT_TAG ndk26)
+  GIT_TAG v0.5.2)
 FetchContent_MakeAvailable(ccommon)
 version_from_git(LOG OFF TIMESTAMP "%Y%m%d%H%M%S")
 
@@ -23,6 +27,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 include(GNUInstallDirs)
+include(InstallRequiredSystemLibraries)
 
 if(USE_QML)
   find_package(Qt6 COMPONENTS Core Xml Gui Quick)
@@ -32,13 +37,13 @@ endif(USE_QML)
 
 if(Qt6_FOUND)
   qt_standard_project_setup()
-  add_library(updater include/esterv/utils/updater.hpp src/updater.cpp)
-  add_library(Esterv::updater ALIAS updater)
-  set_target_properties(updater PROPERTIES VERSION ${VERSION} SOVERSION
+  add_library(Updater include/esterv/utils/updater.hpp src/updater.cpp)
+  add_library(Esterv::Updater ALIAS Updater)
+  set_target_properties(Updater PROPERTIES VERSION ${VERSION} SOVERSION
                                                               ${VERSION_MAJOR})
   if(USE_QML)
     qt6_add_qml_module(
-      updater
+      Updater
       URI
       Esterv.Utils.Updater
       VERSION
@@ -53,9 +58,13 @@ if(Qt6_FOUND)
       ${CMAKE_BINARY_DIR}/Esterv/Utils/Updater
       IMPORT_PATH
       ${CMAKE_BINARY_DIR})
-    add_library(Esterv::updaterplugin ALIAS updaterplugin)
-    target_link_libraries(updater PUBLIC Qt6::Gui Qt6::Quick)
-    target_compile_definitions(updater PRIVATE USE_QML)
+    add_library(Esterv::Updaterplugin ALIAS Updaterplugin)
+    target_link_libraries(Updater PUBLIC Qt6::Gui Qt6::Quick)
+    target_compile_definitions(Updater PRIVATE USE_QML)
+  
+    target_include_directories(
+    Updater
+    PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/esterv/utils>)
 
     install(
       TARGETS ${out_targets_var}
@@ -69,7 +78,7 @@ if(Qt6_FOUND)
       DESTINATION ${CMAKE_INSTALL_LIBDIR}/Esterv/Utils
       COMPONENT ${PROJECT_NAME}-qml)
     install(
-      TARGETS updaterplugin
+      TARGETS Updaterplugin
       EXPORT ${PROJECT_NAME}-config
       DESTINATION ${CMAKE_INSTALL_LIBDIR}/Esterv/Utils/Updater
       COMPONENT ${PROJECT_NAME}-qml
@@ -78,31 +87,28 @@ if(Qt6_FOUND)
   endif(USE_QML)
 
   target_include_directories(
-    updater PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    Updater PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
-  target_include_directories(
-    updater
-    PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/esterv/utils>)
 
-  target_link_libraries(updater PUBLIC Qt6::Core Qt6::Xml)
+  target_link_libraries(Updater PUBLIC Qt6::Core Qt6::Xml)
 
   target_compile_definitions(
-    updater
+    Updater
     PUBLIC
-      $<IF:$<AND:$<BOOL:WIN32>,$<STREQUAL:$<TARGET_PROPERTY:updater,TYPE>,SHARED_LIBRARY>>,UPDATER_SHARED,>
+      $<IF:$<AND:$<BOOL:WIN32>,$<STREQUAL:$<TARGET_PROPERTY:Updater,TYPE>,SHARED_LIBRARY>>,UPDATER_SHARED,>
   )
   target_compile_definitions(
-	  updater
+	  Updater
 	  PRIVATE 
 	  WINDOWS_EXPORT
   )
 
   install(
-    TARGETS updater
+    TARGETS Updater
     EXPORT ${PROJECT_NAME}-config
     COMPONENT ${PROJECT_NAME}
     ARCHIVE COMPONENT ${PROJECT_NAME}-dev
-    RUNTIME COMPONENT ${PROJECT_NAME})
+    )
   install(
     DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
