--- a/Config.cmake.in
+++ b/Config.cmake.in
@@ -1,4 +1,8 @@
 @PACKAGE_INIT@
 include(CMakeFindDependencyMacro)
+if(@USE_QML@)
 find_dependency(Qt6 COMPONENTS Core Xml Gui Quick )
-include ( "${CMAKE_CURRENT_LIST_DIR}/EstervUpdater-config.cmake" )
+else()
+  find_package(Qt6 COMPONENTS Core Xml)
+endif()
+include ( "${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-config.cmake" )
