--- a/.github/workflows/build-test-install.yml
+++ b/.github/workflows/build-test-install.yml
@@ -8,21 +8,12 @@ on:
   pull_request:
     branches: [main,develop]
 jobs:
-  check_format:
-    if: startsWith(github.base_ref, 'main') 
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Check if formatted_code branch exist
-        run: |
-
-
   build_test_package:
     strategy:
       matrix:
         os: [ubuntu-latest,macos-latest,windows-latest]
 
-    uses: EddyTheCo/Common/.github/workflows/build-test-install.yml@add_code_format_check
+    uses: EddyTheCo/Common/.github/workflows/build-test-install.yml@v0.5.2
     with:
       os: ${{ matrix.os }}
       qtVersion: '6.8.1'
