--- a/.github/workflows/build-test-install.yml
+++ b/.github/workflows/build-test-install.yml
@@ -1,34 +1,26 @@
 name: push-build-release
-run-name: ${{ github.actor }} ${{ github.event_name }} to ${{ github.base_ref }} 
+run-name: ${{ github.actor }} ${{ github.event_name }} to ${{ github.event.pull_request.base.ref }}
 on: 
 
   push:
     tags:
       - 'v*'
   pull_request:
-    branches: [develop]
+    branches: [main,develop]
 jobs:
   build_test_package:
-    permissions: read-all
     strategy:
       matrix:
         os: [ubuntu-latest,macos-latest,windows-latest]
 
-    uses: EddyTheCo/Common/.github/workflows/build-test-install.yml@v0.4.0
+    uses: EddyTheCo/Common/.github/workflows/build-test-install.yml@v0.5.2
     with:
       os: ${{ matrix.os }}
-      qtVersion: '6.6.0'
-      cmakeArgs: "-DQTDEPLOY=ON -DBUILD_EXAMPLES=ON -DCPACK_PACKAGE_CONTACT=estervtech@gmail.com -DREPO_URL=https://eddytheco.github.io/QUpdater -DCPACK_PACKAGE_VENDOR=estervtech"
-      test: false
-      qmllint: ${{ startsWith(matrix.os, 'ubuntu') && startsWith(github.base_ref, 'develop') }}
+      qtVersion: '6.8.1'
   
-  build_doxygen:
-    if: startsWith(github.ref, 'refs/tags/v')
-    uses: EddyTheCo/Common/.github/workflows/build-docs.yml@v0.4.0
-
   release:
     if: startsWith(github.ref, 'refs/tags/v')
-    needs: [build_test_package, build_doxygen]
+    needs: build_test_package
     runs-on: ubuntu-latest
 
     permissions:
@@ -47,13 +39,11 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
            path: artifacts
-      - name: Display structure of downloaded files
-        run: ls -R
 
       - name: Move repositories to webpage
         run: |
-          mv artifacts/docs/html github-pages
-          rm -rf artifacts/docs
+          mv artifacts/common/html github-pages
+          mv artifacts/common .
           mkdir github-pages/packages/ ${{runner.temp}}/platforms/
           mv artifacts/*/_CPack_Packages/* ${{runner.temp}}/platforms/
           for i in ${{runner.temp}}/platforms/*; do mv $i/IFW/*/repository/* $i/; rm -rf $i/IFW $i/TGZ; done;
@@ -67,13 +57,14 @@ jobs:
           cmake -E tar c ${{runner.temp}}/page-packages/github-pages.tar -- .
 
       - name: Releases 
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
-          files: ./artifacts/*/*   
+          files: ./artifacts/*/*
+          body_path: ./common/CHANGELOG.md
 
       - uses: actions/upload-artifact@v4
         with:
-          name: 'github-pages' 
+          name: 'github-pages'
           path:  ${{runner.temp}}/page-packages/*
 
       - name: Deploy to GitHub Pages
