--- a/.github/workflows/qml-lint.yml
+++ b/.github/workflows/qml-lint.yml
@@ -17,7 +17,7 @@ jobs:
       - name: 'Download artifact'
         uses: actions/download-artifact@v4
         with:
-          name: qmllint
+          name: common
           github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
 
@@ -28,7 +28,7 @@ jobs:
           echo "prn=$(cat pr_number)" >> $GITHUB_OUTPUT
 
       - name: 'Run reviewer'
-        uses: EddyTheCo/qmllint-action/@main
+        uses: EddyTheCo/qmllint-action/@v0.1.0
         with:
           jsondir:  ${{ github.workspace }}
           pr_number: ${{ steps.getprn.outputs.prn }}
